# autoboat_vt

./: .dockerignore  .gitignore  .prettierrc  99-realsense-libusb.rules  DEPENDENCY_ANALYSIS.md  KNOWN_ISSUES.txt  README.md  STUFF_I_DID.md  TODO.md  TODO_CPP  TODO_CPP.md  TODO_REFACTORING.md  biome.jsonc  build_and_push_all_docker_images_commands.sh  build_dockerfile_commands.sh  devcontainer_environment_variables  docker_dev_environment_setup.sh  install.sh  install_deepstream_yolo_dev_container.sh  install_deepstream_yolo_jetson.sh  install_everything_onto_jetson_no_docker.sh  object_detection_setup.sh  pyproject.toml  requirements.txt  ruff.toml  taplo.toml
microros/: CMakeLists.txt  microros_setup.sh  package.xml
microros/src/: amt22_encoder.cpp  amt22_encoder_library.hpp  cmps14_compass.cpp  common_libraries.h  microros.cpp  microros.hpp  spi_device.cpp
ros_packages/drivers_cpp/: CMakeLists.txt  package.xml
ros_packages/drivers_cpp/src/: utils.hpp
ros_packages/drivers_cpp/src/motor_controller/: vesc_node.cpp
ros_packages/drivers_cpp/src/motor_controller/vesc_protocol/: buffer.cpp  (+2 more)
ros_packages/drivers_cpp/src/rc/: rc_node.cpp
ros_packages/simulation/simulation_models/: package.xml  setup.cfg
ros_packages/simulation/simulation_models/models/: motorboat_model_differential_thrust.sdf
src/autoboat_msgs/: CMakeLists.txt  package.xml
src/autoboat_msgs/msg/: JetsonStats.msg  ObjectDetectionResult.msg  ObjectDetectionResultsList.msg  RCData.msg  TriangulationResult.msg  TriangulationResultsList.msg
src/autopilot/: package.xml  setup.py
src/autopilot/autopilot/: .motorboat_autopilot_node.py.swp  __init__.py  autopilot_transform_node.py  motorboat_autopilot_node.py  sailboat_autopilot_node.py  sailboat_obstacles_node.py  sailboat_pathfinding_node.py  telemetry_node.py
src/autopilot/autopilot/autopilot_library/: __init__.py  astar.py  base_autopilot.py  checkpoint.py  discrete_pid.py  motorboat_autopilot.py  node.py  nodeSpace.py  position.py  sailboat_autopilot.py  utils.py
src/autopilot/autopilot/config/: motorboat_default_parameters.json  motorboat_default_parameters.jsonc  motorboat_default_parameters.yaml  sailboat_default_parameters.json  sailboat_default_parameters.jsonc
src/autopilot_cpp/: CMakeLists.txt  package.xml
src/autopilot_cpp/autopilot_library/: autopilot_utils.cpp  autopilot_utils.hpp  discrete_pid.cpp  discrete_pid.hpp  geographic_function_library.cpp  geographic_function_library.hpp  motorboat_autopilot.cpp  motorboat_autopilot.hpp  position.cpp  position.hpp  sailboat_autopilot.cpp  sailboat_autopilot.hpp  telemetry_payloads.cpp  telemetry_payloads.hpp
src/autopilot_cpp/config/: motorboat_default_parameters.json
src/autopilot_cpp/include/autopilot_cpp/: discrete_pid.hpp
src/autopilot_cpp/src/: motorboat_autopilot_node.cpp  motorboat_autopilot_node.hpp  sailboat_autopilot_node.cpp  sailboat_autopilot_node.hpp  telemetry_node.cpp  telemetry_node.hpp  telemetry_payloads.cpp  telemetry_payloads.hpp
src/autopilot_cpp/src/autopilot_library/: motorboat_autopilot.cpp  position.cpp
src/microros/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  microros_setup.sh  package.xml  pico_microros.dis  pico_microros.elf  pico_microros.elf.map  pico_microros.hex  pico_microros.uf2
src/microros/pico-sdk/: Makefile  cmake_install.cmake
src/microros/pico-sdk/docs/: Makefile  cmake_install.cmake
src/microros/pico-sdk/src/: Makefile  cmake_install.cmake
src/microros/pico-sdk/tools/: Makefile  cmake_install.cmake
src/microros/picotool/tmp/: picotoolBuild-cfgcmd.txt
src/microros/src/: CMPS14 Subclass.cpp  GVM_Subclass.cpp  GVM_Subclass.h  HAL.cpp  HAL.hpp  I2C parent class.cpp  UART.cpp  UART.h  amt22_encoder.cpp  amt22_encoder_library.c  amt22_encoder_library.cpp  amt22_encoder_library.h  amt22_encoder_library2.cpp  amt22_encoder_library2.h  application.hpp  boat.cpp  boat.hpp  cmps14_Subclass.cpp  cmps14_Subclass.h  cmps14_compass.cpp  cmps14_compass.hpp  cmps14_compass_library.h  common_libraries.h  common_libraries_refactored.cpp  compass_library.cpp  config.h  contactor.c  contactor_driver_library.h  drv8711_steper_motor_driver_library2.h  drv8711_stepper_motor_driver_library.cpp  drv8711_stepper_motor_driver_library.h  drv8711_stepper_motor_driver_library.hpp  drv8711_stepper_motor_driver_library2.cpp  drv8711_stepper_motor_driver_library2.h  i2c_device.cpp  i2c_parent_class.cpp  i2c_parent_class.h  main.c  main.cpp  main_microros_node.cpp  (+9 more)
src/motorboat_sim_testing/buoyancy/: CMakeLists.txt  package.xml
src/motorboat_sim_testing/buoyancy/include/: Buoyancy.hh
src/motorboat_sim_testing/buoyancy/src/: Buoyancy.cc
src/motorboat_sim_testing/foil_dynamics/: CMakeLists.txt  package.xml
src/motorboat_sim_testing/foil_dynamics/include/: FoilDynamics.hh
src/motorboat_sim_testing/foil_dynamics/src/: FoilDynamics.cc
src/motorboat_sim_testing/sail_limits/: CMakeLists.txt  package.xml
src/motorboat_sim_testing/sail_limits/include/: SailLimits.hh
src/motorboat_sim_testing/sail_limits/src/: SailLimits.cc
src/motorboat_sim_testing/wind_arrow/: CMakeLists.txt  package.xml
src/motorboat_sim_testing/wind_arrow/include/: WindArrow.hh
src/motorboat_simulation/sail_limits/: package.xml
src/motorboat_simulation/wind_arrow/: package.xml
src/motorboat_simulation/wind_arrow/src/: WindArrow.cc
src/sensors_cpp/: CMakeLists.txt  package.xml
src/sensors_cpp/include/sensors_cpp/: get_device_filepath_utils.hpp  utils.hpp
src/sensors_cpp/include/xcrsf/: crossfire.h
src/sensors_cpp/original_xcrsf/: .gitignore  CMakeLists.txt  README.md
src/sensors_cpp/original_xcrsf/examples/: main.cpp
src/sensors_cpp/original_xcrsf/src/: serial.cpp
src/sensors_cpp/src/: rc_node.cpp  rc_node.hpp  wind_sensor_node.cpp  wind_sensor_node.hpp
src/sensors_cpp/src/xcrsf/: crc.cpp  crossfire.cpp  definitions.h  handler.cpp  handler.h  serial.h  utils.cpp
src/vesc_cpp/: CMakeLists.txt  package.xml
src/vesc_cpp/src/: utils.hpp  vesc_node.cpp  vesc_node.hpp
src/vesc_cpp/src/vesc_protocol/: crc.cpp  vesc_protocol.cpp
(+686 files in other folders)
