<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autopilot</name>
  <version>1.0.0</version>
  <description>Contains all of the ros2 nodes necessary to run the autopilot software and telemetry software</description>
  <maintainer email="autoboat@vt.edu">autoboatvt</maintainer>
  <license>http://www.apache.org/licenses/LICENSE-2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
