<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_models</name>
  <version>1.0.0</version>
  <description>SDF models and resources for the VT AutoBoat simulation.</description>
  <maintainer email="autoboat@vt.edu">autoboatvt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_copyright</buildtool_depend>
  <buildtool_depend>ament_flake8</buildtool_depend>
  <buildtool_depend>ament_pep257</buildtool_depend>
  <buildtool_depend>python3-pytest</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
