<?xml version="1.0"?>
<package format="3">
  <name>wind_arrow</name>
  <version>1.0.0</version>
  <description>Wind Arrow package for AutoboatVT.</description>
  <maintainer email="ashear@vt.edu">ashear</maintainer>
  <license>http://www.apache.org/licenses/LICENSE-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
